# switchbot

./: Cargo.toml  README.md  test
examples/: get_battery.rs  get_climate.rs  get_humidity.rs  get_status.rs  get_temperature.rs  meter.rs
src/: device.rs  lib.rs  meter.rs  response.rs  switchbot.rs
src/api/: battery.rs  climate.rs  humidity.rs  mod.rs  temperature.rs
src/devices/: hub2.rs  io_thermo_hygrometer.rs  mod.rs
tests/: api_error.rs
