[package]
name = "switchbot-api2"
version = "0.2.2"
rust-version = "1.85"
edition = "2024"
description = "SwitchBot device control"
keywords = ["switchbot", "smart", "device", "api", "client"]
documentation = "https://docs.rs/switchbot-api2"
repository = "https://github.com/calder/switchbot"
readme = "README.md"
license = "MIT"
authors = ["Calder Coalson <caldercoalson@gmail.com>"]

[dependencies]
anyhow = { version = "1" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
